@@ -3,6 +3,7 @@ Version: 0.4.0
 Date: ????
   Features:
     - Added `direction.to_vector_2d`
+    - Added `math` module
   Changes:
     - `gui.add_handlers()` now only supports `on_gui` defines.events events
     - Removed direction fields (use defines.direction instead)
